# ai-hub

./: Cargo.toml  build.yml  tauri.conf.json
.github/workflows/: build.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: ChatView.vue  Sidebar.vue  TopBar.vue
frontend/src/store/: chat.ts  theme.ts
frontend/src/styles/: theme.css
src/: lib.rs  main.rs
src/adapters/: gemini.rs  mod.rs  traits.rs
src/commands/: chat.rs
src/learning/: crawler.rs  knowledge_base.rs  mod.rs
src/router/: metrics.rs  mod.rs  selector.rs
src/storage/: db.rs  encryption.rs  mod.rs  models.rs
src/upgrade/: diagnoser.rs  hot_loader.rs  mod.rs
src/utils/: config.rs
