[package]
name = "ai-hub"
version = "0.1.0"
edition = "2021"

[lib]
name = "ai_hub"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = [] }
tauri-plugin-shell = "2.3.5"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
ring = "0.17"
mlua = { version = "0.9", features = ["lua54", "vendored"] }
scraper = "0.20"
log = "0.4"
env_logger = "0.11"
dirs-next = "2.0"
async-trait = "0.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
